testsuite/tests/typing-modules-bugs/pr10661_bad.compilers.reference
Fatal error: exception File "typing/signature_group.ml", line 52, characters 19-25: Assertion failed
