testsuite/tests/typing-modules-bugs/pr10661_bad.ml
(* TEST
ocamlc_byte_exit_status = "2"
* setup-ocamlc.byte-build-env
** ocamlc.byte
*** check-ocamlc.byte-output
*)

module M = struct
  class row = object
  end
end
